--- a/index.html
+++ b/index.html
@@ -38,49 +38,60 @@
 
         <ul class="contacts">
           <li class="item">
-            <a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-info" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-info" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
     </header>
 
     <main>
-      <section class="hero">
-        <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
-      </section>
+        <section class="hero">
+          <div class="container">
+          <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
+        </section>
 
       <section class="benefits">
-        <h2 class="visually-hidden">Наші переваги</h2>
-        <ul class="benefits-list">
-          <li>
-            <h3 class="benefit-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="benefit-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefit-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="benefit-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefit-title">ПЛАНУВАННЯ</h3>
-            <p class="benefit-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefit-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="benefit-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <ul class="benefits-list">
+            <li>
+              <h3 class="benefit-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefit-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefit-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefit-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefit-title">ПЛАНУВАННЯ</h3>
+              <p class="benefit-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="benefit-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefit-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="competencies">
@@ -135,10 +146,14 @@
             >
           </li>
           <li>
-            <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-contact-info" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-contact-info" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
