--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
     </header>
 
     <main>
-        <section class="hero">
-          <div class="container">
+      <section class="hero">
+        <div class="container">
           <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
-        </section>
+      </section>
 
       <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list">
-            <li>
+            <li class="benefits-item">
               <h3 class="benefit-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="benefit-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefit-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="benefit-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefit-title">ПЛАНУВАННЯ</h3>
               <p class="benefit-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="benefits-item">
               <h3 class="benefit-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="benefit-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -95,68 +95,98 @@
       </section>
 
       <section class="competencies">
-        <h2 class="competencies-title">Чим ми займаємося</h2>
-        <ul class="competencies-list">
-          <li>
-            <img src="images/img1.jpg" alt="coding process" width="370" />
-          </li>
-          <li><img src="images/img2.jpg" alt="mobile app" width="370" /></li>
-          <li><img src="images/img3.jpg" alt="colors" width="370" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="competencies-title">Чим ми займаємося</h2>
+          <ul class="competencies-list">
+            <li class="competencies-item">
+              <img src="images/img1.jpg" alt="coding process" width="370" />
+            </li>
+            <li class="competencies-item">
+              <img src="images/img2.jpg" alt="mobile app" width="370" />
+            </li>
+            <li class="competencies-item">
+              <img src="images/img3.jpg" alt="colors" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-card">
-            <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3 class="team-names">Ігор Дем'яненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img src="images/olha.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3 class="team-names">Ольга Рєпіна</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img src="images/mykola.jpg" alt="Микола Тарасов" width="270" />
-            <h3 class="team-names">Микола Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3 class="team-names">Михайло Єрмаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="images/ihor.jpg"
+                alt="Ігор Дем'яненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-names">Ігор Дем'яненко</h3>
+              <p class="team-position">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/olha.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-names">Ольга Рєпіна</h3>
+              <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/mykola.jpg"
+                alt="Микола Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-names">Микола Тарасов</h3>
+              <p class="team-position">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/mihailo.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-names">Михайло Єрмаков</h3>
+              <p class="team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-contacts">
-          <li>
-            <a
-              class="location"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="footer-contact-info" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-contact-info" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+        <address class="footer-address">
+          <ul class="footer-contacts">
+            <li class="footer-item">
+              <a
+                class="location"
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-contact-info" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
