--- a/portfolio.html
+++ b/portfolio.html
@@ -64,63 +64,80 @@
             <li class="filtered-products">
               <a class="filtered-link" href="#"><img src="./images/technocrack.jpg" alt="Technocrack web-site image"
                   width="370" />
-                  <div class="text"></div>
-                <h3 class="filtered-title">Технокряк</h3>
-                <p class="filtered-desc">Веб-сайт</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Технокряк</h3>
+                  <p class="filtered-desc">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img
                   src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
-                <h3 class="filtered-title">Постер New Orlean vs Golden Star</h3>
-                <p class="filtered-desc">Дизайн</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="filtered-desc">Дизайн</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/seafood.jpg"
                   alt="Seafood app image" width="370" />
-                <h3 class="filtered-title">Ресторан Seafood</h3>
-                <p class="filtered-desc">Додаток</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Ресторан Seafood</h3>
+                  <p class="filtered-desc">Додаток</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/prime.jpg"
                   alt="Prime project image" width="370" />
-                <h3 class="filtered-title">Проєкт Prime</h3>
-                <p class="filtered-desc">Маркетинг</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Проєкт Prime</h3>
+                  <p class="filtered-desc">Маркетинг</p>
+                </div>
             </li></a>
 
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/boxes.jpg"
                   alt="Boxes project image" width="370" />
-                <h3 class="filtered-title">Проєкт Boxes</h3>
-                <p class="filtered-desc">Додаток</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Проєкт Boxes</h3>
+                  <p class="filtered-desc">Додаток</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/inspiration.jpg"
                   alt="Inspiration has no Borders web-site image" width="370" />
-                <h3 class="filtered-title">Inspiration has no Borders</h3>
-                <p class="filtered-desc">Веб-сайт</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Inspiration has no Borders</h3>
+                  <p class="filtered-desc">Веб-сайт</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/limited-edition.jpg"
                   alt="Limited Edition design image" width="370" />
-                <h3 class="filtered-title">Видання Limited Edition</h3>
-                <p class="filtered-desc">Дизайн</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Видання Limited Edition</h3>
+                  <p class="filtered-desc">Дизайн</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/lab.jpg"
                   alt=" LAB project image" width="370" />
-                <h3 class="filtered-title">Проєкт LAB</h3>
-                <p class="filtered-desc">Маркетинг</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Проєкт LAB</h3>
+                  <p class="filtered-desc">Маркетинг</p>
+                </div>
               </a>
 
             </li>
             <li class="filtered-products"> <a class="filtered-link" href="#"><img src="./images/growing-business.jpg"
                   alt="" width="370" />
-                <h3 class="filtered-title">Growing Business</h3>
-                <p class="filtered-desc">Додаток</p>
+                <div class="filtered-text">
+                  <h3 class="filtered-title">Growing Business</h3>
+                  <p class="filtered-desc">Додаток</p>
+                </div>
               </a>
 
             </li>
