--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,6 @@
   <main>
     <section class="section filter">
       <div class="container">
-        <div class="container">
           <h1 class="visually-hidden">Наші роботи</h1>
           <ul class="filter-list">
             <li class="filter-item"><button class="filter-button active" type="button">Усі</button></li>
@@ -56,11 +55,9 @@
             <li class="filter-item"><button class="filter-button" type="button">Дизайн</button></li>
             <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
           </ul>
-        </div>
 
 
         <ul class="filtered-list">
-          <div class="container">
             <li class="filtered-products">
               <a class="filtered-link" href="#"><img src="./images/technocrack.jpg" alt="Technocrack web-site image"
                   width="370" />
@@ -139,10 +136,8 @@
                   <p class="filtered-desc">Додаток</p>
                 </div>
               </a>
-
             </li>
         </ul>
-      </div>
       </div>
     </section>
   </main>
@@ -153,8 +148,9 @@
       <address class="footer-address">
         <ul class="footer-contacts">
           <li class="footer-item">
-            <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-              rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+            <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li class="footer-item">
             <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
