--- a/index.html
+++ b/index.html
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -38,14 +32,10 @@
 
         <ul class="contacts">
           <li class="item">
-            <a class="contact-info" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a class="contact-info" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -59,42 +49,31 @@
         </div>
       </section>
 
-      <section class="benefits">
+      <section class="benefits section">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefit-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="benefit-text">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
-              </p>
+              <p class="benefit-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="benefits-item">
               <h3 class="benefit-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="benefit-text">
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
-              </p>
+              <p class="benefit-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="benefits-item">
               <h3 class="benefit-title">ПЛАНУВАННЯ</h3>
-              <p class="benefit-text">
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
+              <p class="benefit-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="benefits-item">
               <h3 class="benefit-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="benefit-text">
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
-              </p>
+              <p class="benefit-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="competencies">
+      <section class="competencies section">
         <div class="container">
           <h2 class="competencies-title">Чим ми займаємося</h2>
           <ul class="competencies-list">
@@ -111,49 +90,37 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-card">
-              <img
-                src="images/ihor.jpg"
-                alt="Ігор Дем'яненко"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-names">Ігор Дем'яненко</h3>
-              <p class="team-position">Product Designer</p>
+              <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+              <div class="team-text">
+                <h3 class="team-names">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
-              <img
-                src="images/olha.jpg"
-                alt="Ольга Рєпіна"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-names">Ольга Рєпіна</h3>
-              <p class="team-position">Frontend Developer</p>
+              <img src="images/olha.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+              <div class="team-text">
+                <h3 class="team-names">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
-              <img
-                src="images/mykola.jpg"
-                alt="Микола Тарасов"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-names">Микола Тарасов</h3>
-              <p class="team-position">Marketing</p>
+              <img src="images/mykola.jpg" alt="Микола Тарасов" width="270" height="260" />
+              <div class="team-text">
+                <h3 class="team-names">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
-              <img
-                src="images/mihailo.jpg"
-                alt="Михайло Єрмаков"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-names">Михайло Єрмаков</h3>
-              <p class="team-position">UI Designer</p>
+              <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+              <div class="team-text">
+                <h3 class="team-names">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -166,23 +133,15 @@
         <address class="footer-address">
           <ul class="footer-contacts">
             <li class="footer-item">
-              <a
-                class="location"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
+              <a class="location" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
             <li class="footer-item">
-              <a class="footer-contact-info" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+              <a class="footer-contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="footer-item">
-              <a class="footer-contact-info" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="footer-contact-info" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
