--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="container">
         <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
         <address class="footer-address">
