--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="overlay">
           <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
