--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="benefits-list">
-            <li class="benefits-item">
+            <li class="benefits-item icon-antenna">
               <h3 class="benefit-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="benefit-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-clock">
               <h3 class="benefit-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="benefit-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-diagram">
               <h3 class="benefit-title">ПЛАНУВАННЯ</h3>
               <p class="benefit-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li class="benefits-item">
+            <li class="benefits-item icon-astronaut">
               <h3 class="benefit-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="benefit-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
