--- a/index.html
+++ b/index.html
@@ -103,49 +103,65 @@
               <div class="team-text">
                 <h3 class="team-names">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
-                <div class="social-icons">
+              </div>
+              <ul class="social-icons">
+                <li>
                   <a href="#" class="round-icon"
                     ><svg class="icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use></svg
                   ></a>
+                </li>
+                <li>
                   <a href="#" class="round-icon"
                     ><svg class="icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use></svg
                   ></a>
+                </li>
+                <li>
                   <a href="#" class="round-icon"
                     ><svg class="icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use></svg
                   ></a>
+                </li>
+                <li>
                   <a href="#" class="round-icon"
                     ><svg class="icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use></svg
                   ></a>
-                </div>
-              </div>
+                </li>
+              </ul>
             </li>
             <li class="team-card">
               <img src="images/olha.jpg" alt="Ольга Рєпіна" width="270" height="260" />
               <div class="team-text">
                 <h3 class="team-names">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
-                <div class="social-icons">
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use></svg
-                  ></a>
-                </div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -153,24 +169,32 @@
               <div class="team-text">
                 <h3 class="team-names">Микола Тарасов</h3>
                 <p class="team-position">Marketing</p>
-                <div class="social-icons">
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use></svg
-                  ></a>
-                </div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -178,24 +202,32 @@
               <div class="team-text">
                 <h3 class="team-names">Михайло Єрмаков</h3>
                 <p class="team-position">UI Designer</p>
-                <div class="social-icons">
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#instagram"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#twitter"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#facebook"></use></svg
-                  ></a>
-                  <a href="#" class="round-icon"
-                    ><svg class="icon" width="20" height="20">
-                      <use href="./images/icons.svg#linkedin"></use></svg
-                  ></a>
-                </div>
+                <ul class="social-icons">
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="#" class="round-icon"
+                      ><svg class="icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -206,38 +238,38 @@
         <div class="container">
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list">
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client1"></use></svg
               ></a>
             </li>
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client2"></use></svg
               ></a>
             </li>
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client3"></use></svg
               ></a>
             </li>
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client4"></use></svg
               ></a>
             </li>
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client5"></use></svg
               ></a>
             </li>
-            <li class="bordered-icon">
-              <a href="#"
+            <li class="clients-item">
+              <a href="#"  class="bordered-icon"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client6"></use></svg
               ></a>
@@ -272,25 +304,25 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
             </li>
