--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
         </div>
         <div class="subscribe">
           <form class="subscribe-form">
-            <label for="email" class="footer-label">Підпишіться на розсилку</label>
-            <input type="email" class="footer-input" placeholder="E-mail" />
+            <label for="sub-email" class="footer-label">Підпишіться на розсилку</label>
+            <input type="email" class="footer-input" placeholder="E-mail" id="sub-email" />
             <button type="submit" class="footer-button">
               Підписатися
               <svg class="footer-sub-icon" width="24" height="24">
