--- a/portfolio.html
+++ b/portfolio.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebStudio</title>
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
-
-<body>
-<header>
+  <body>
+    <header>
       <div class="container">
         <a class="logo" href="./index.html"><span>Web</span>Studio</a>
         <nav>
@@ -48,9 +45,9 @@
       </div>
     </header>
 
-  <main>
-    <section class="section filter">
-      <div class="container">
+    <main>
+      <section class="section filter">
+        <div class="container">
           <h1 class="visually-hidden">Наші роботи</h1>
           <ul class="filter-list">
             <li class="filter-item"><button class="filter-button active" type="button">Усі</button></li>
@@ -60,111 +57,131 @@
             <li class="filter-item"><button class="filter-button" type="button">Маркетинг</button></li>
           </ul>
 
-
-        <ul class="filtered-list">
+          <ul class="filtered-list">
             <li class="filtered-products">
               <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/technocrack.jpg" alt="Technocrack web-site image"
-                  width="370" />
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/technocrack.jpg" alt="Technocrack web-site image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Технокряк</h3>
                   <p class="filtered-desc">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img
-                  src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/neworlean-vs-goldenstar.jpg" alt="Poster New Orlean vs Golden Star" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Постер New Orlean vs Golden Star</h3>
                   <p class="filtered-desc">Дизайн</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/seafood.jpg"
-                  alt="Seafood app image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/seafood.jpg" alt="Seafood app image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Ресторан Seafood</h3>
                   <p class="filtered-desc">Додаток</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/prime.jpg"
-                  alt="Prime project image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/prime.jpg" alt="Prime project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт Prime</h3>
                   <p class="filtered-desc">Маркетинг</p>
                 </div>
-            </li></a>
+              </a>
+            </li>
 
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/boxes.jpg"
-                  alt="Boxes project image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/boxes.jpg" alt="Boxes project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт Boxes</h3>
                   <p class="filtered-desc">Додаток</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/inspiration.jpg"
-                  alt="Inspiration has no Borders web-site image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/inspiration.jpg" alt="Inspiration has no Borders web-site image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Inspiration has no Borders</h3>
                   <p class="filtered-desc">Веб-сайт</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/limited-edition.jpg"
-                  alt="Limited Edition design image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/limited-edition.jpg" alt="Limited Edition design image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Видання Limited Edition</h3>
                   <p class="filtered-desc">Дизайн</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/lab.jpg"
-                  alt=" LAB project image" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/lab.jpg" alt=" LAB project image" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Проєкт LAB</h3>
                   <p class="filtered-desc">Маркетинг</p>
                 </div>
               </a>
-
             </li>
-            <li class="filtered-products"> <a class="filtered-link" href="#">
-                <p class="portfolio-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
-                <img src="./images/growing-business.jpg"
-                  alt="" width="370" />
+            <li class="filtered-products">
+              <a class="filtered-link" href="#">
+                <p class="portfolio-overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
+                  відомості про компанію чи приватну особу.
+                </p>
+                <img src="./images/growing-business.jpg" alt="" width="370" />
                 <div class="filtered-text">
                   <h3 class="filtered-title">Growing Business</h3>
                   <p class="filtered-desc">Додаток</p>
                 </div>
               </a>
             </li>
-        </ul>
-      </div>
-    </section>
-  </main>
+          </ul>
+        </div>
+      </section>
+    </main>
 
-  <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="adress-block">
           <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
@@ -189,32 +206,43 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="footer-social-item">
               <a href="#" class="round-icon"
-                ><svg class="icon " width="20" height="20">
+                ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form class="subscribe-form">
+            <label for="sub-email" class="footer-label">Підпишіться на розсилку</label>
+            <input type="email" class="footer-input" placeholder="E-mail" id="sub-email" />
+            <button type="submit" class="footer-button">
+              Підписатися
+              <svg class="footer-sub-icon" width="24" height="24">
+                <use href="./images/icons.svg#footer-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-</body>
-
+  </body>
 </html>
