--- a/index.html
+++ b/index.html
@@ -214,25 +214,25 @@
                 <p class="team__meta--position">Marketing</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -257,25 +257,25 @@
                 <p class="team__meta--position">UI Designer</p>
                 <ul class="team__icons-list">
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use></svg
                     ></a>
                   </li>
                   <li>
-                    <a href="#" class="round-icon"
+                    <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                       ><svg class="icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use></svg
                     ></a>
@@ -293,37 +293,37 @@
           <h2 class="clients__title">Постійні клієнти</h2>
           <ul class="clients__list">
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client1"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client2"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client3"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client4"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client5"></use></svg
               ></a>
             </li>
             <li class="clients__item">
-              <a href="#" class="bordered-icon"
+              <a href="#" class="bordered-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="106" height="60">
                   <use href="./images/icons.svg#client6"></use></svg
               ></a>
@@ -358,25 +358,25 @@
           <h3 class="social__title">Приєднуйтесь</h3>
           <ul class="social__list">
             <li class="social__item">
-              <a href="#" class="round-icon"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use></svg
               ></a>
             </li>
             <li class="social__item">
-              <a href="#" class="round-icon"
+              <a href="#" class="round-icon" target="_blank" rel="noopener noreferrer"
                 ><svg class="icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use></svg
               ></a>
